--- a/index.html
+++ b/index.html
@@ -111,6 +111,48 @@
             <!-- End of Section 2 Buttons -->
         </div>
         <!-- End of Section-2 -->
+
+        <!-- Section-3 -->
+        <div class="section-3 center">
+            <!-- Section-3-Heading -->
+            <h1 class="section-3-heading">Macbook Air</h1>
+            <!-- End of Section-3-Heading -->
+
+            <!-- Section-3-Content -->
+            <div class="section-3-content center">
+                <!-- Section-1-Images -->
+                <img
+                    src="images/MacBook/macbook-screen.png"
+                    class="macbook-img-1"
+                    alt=""
+                />
+                <img
+                    src="images/MacBook/macbook-keyboard.png"
+                    class="macbook-img-2"
+                    alt=""
+                />
+                <!-- End of Section-1-Images -->
+
+                <!-- Section-3-Loading -->
+                <div class="loading-wrapper">
+                    <div class="loading center">
+                        <i class="fab fa-apple"></i>
+                        <div class="progress-bar"></div>
+                    </div>
+                </div>
+                <!-- End of Section-3-Loading -->
+
+                <!-- Section-3-Infp -->
+                <div class="macbook-info">
+                    <h2 class="macbook-info-heading">Light speed</h2>
+                    <p class="macbook-price">Starting at $999</p>
+                    <button class="macbook-btn">Buy Now</button>
+                </div>
+                <!-- End of Section-3-Infp -->
+            </div>
+            <!-- End of Section-3-Content -->
+        </div>
+        <!-- End of Section-3 -->
         <script src="script.js"></script>
     </body>
 </html>
