--- a/index.html
+++ b/index.html
@@ -153,6 +153,133 @@
             <!-- End of Section-3-Content -->
         </div>
         <!-- End of Section-3 -->
+
+        <!-- Section-4 -->
+        <section class="section-4 center">
+            <!-- Section-4-Watches -->
+            <div class="watches center">
+                <!-- Watch-Bands -->
+                <div class="watch-bands center">
+                    <img
+                        src="images/watches/watch-band-1.jpg"
+                        alt=""
+                        class="watch-band-img"
+                    />
+                    <img
+                        src="images/watches/watch-band-2.jpg"
+                        alt=""
+                        class="watch-band-img"
+                    />
+                    <img
+                        src="images/watches/watch-band-3.jpg"
+                        alt=""
+                        class="watch-band-img"
+                    />
+                    <img
+                        src="images/watches/watch-band-4.jpg"
+                        alt=""
+                        class="watch-band-img"
+                    />
+                    <img
+                        src="images/watches/watch-band-5.jpg"
+                        alt=""
+                        class="watch-band-img"
+                    />
+                    <img
+                        src="images/watches/watch-band-6.jpg"
+                        alt=""
+                        class="watch-band-img"
+                    />
+                    <img
+                        src="images/watches/watch-band-7.jpg"
+                        alt=""
+                        class="watch-band-img"
+                    />
+                    <img
+                        src="images/watches/watch-band-8.jpg"
+                        alt=""
+                        class="watch-band-img"
+                    />
+                    <img
+                        src="images/watches/watch-band-9.jpg"
+                        alt=""
+                        class="watch-band-img"
+                    />
+                </div>
+                <!-- End of Watch-Bands -->
+
+                <!-- Watch-Cases -->
+                <div class="watch-cases center">
+                    <img
+                        src="images/watches/watch-case-1.png"
+                        alt=""
+                        class="watch-case-img"
+                    />
+                    <img
+                        src="images/watches/watch-case-2.png"
+                        alt=""
+                        class="watch-case-img"
+                    />
+                    <img
+                        src="images/watches/watch-case-3.png"
+                        alt=""
+                        class="watch-case-img"
+                    />
+                    <img
+                        src="images/watches/watch-case-4.png"
+                        alt=""
+                        class="watch-case-img"
+                    />
+                    <img
+                        src="images/watches/watch-case-5.png"
+                        alt=""
+                        class="watch-case-img"
+                    />
+                    <img
+                        src="images/watches/watch-case-6.png"
+                        alt=""
+                        class="watch-case-img"
+                    />
+                    <img
+                        src="images/watches/watch-case-7.png"
+                        alt=""
+                        class="watch-case-img"
+                    />
+                    <img
+                        src="images/watches/watch-case-8.png"
+                        alt=""
+                        class="watch-case-img"
+                    />
+                    <img
+                        src="images/watches/watch-case-9.png"
+                        alt=""
+                        class="watch-case-img"
+                    />
+                </div>
+                <!-- End of Watch-Cases -->
+            </div>
+            <!-- End of Section-4-Watches -->
+
+            <!-- Watch-Controls -->
+            <a href="#" class="watch-control watch-top-control center">
+                <i class="fas fa-angle-up center"></i>
+            </a>
+            <a href="#" class="watch-control watch-right-control center">
+                <i class="fas fa-angle-right center"></i>
+            </a>
+            <a href="#" class="watch-control watch-bottom-control center">
+                <i class="fas fa-angle-down center"></i>
+            </a>
+            <a href="#" class="watch-control watch-left-control center">
+                <i class="fas fa-angle-left center"></i>
+            </a>
+            <!-- End of Watch-Controls -->
+
+            <!-- Watch-Button -->
+            <button class="watch-btn">Buy Now</button>
+            <!--End of  Watch-Button -->
+        </section>
+        <!-- End of Section-4 -->
         <script src="script.js"></script>
     </body>
 </html>
