--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Apple eCommerce</title>
+        <link rel="shortcut icon" href="images/icons/home-icon.png" />
         <link rel="stylesheet" href="style.css" />
         <link
             rel="stylesheet"
@@ -13,7 +14,7 @@
     <body>
         <div class="container"></div>
         <!-- Section-1 -->
-        <div class="section-1">
+        <div class="section-1" id="home">
             <!-- logo -->
             <a href="#" class="logo">
                 <i class="fab fa-apple"></i>
@@ -22,10 +23,10 @@
 
             <!-- Navbar -->
             <nav class="navbar">
-                <a href="#" class="navbar-link">Iphone 12</a>
-                <a href="#" class="navbar-link">Macbook Air</a>
-                <a href="#" class="navbar-link">iWatch</a>
-                <a href="#" class="navbar-link">Air Pods</a>
+                <a href="#iphone" class="navbar-link">Iphone 12</a>
+                <a href="#macbook" class="navbar-link">Macbook Air</a>
+                <a href="#iwatch" class="navbar-link">iWatch</a>
+                <a href="#airpods" class="navbar-link">Air Pods</a>
             </nav>
             <!-- End of Navbar -->
 
@@ -81,7 +82,7 @@
         <!-- End of Section-1 -->
 
         <!-- Section-2 -->
-        <div class="section-2">
+        <div class="section-2" id="iphone">
             <!-- Section 2 Heading -->
             <h1 class="section-2-heading">iPhone 12</h1>
             <!-- End of Section 2 Heading -->
@@ -113,7 +114,7 @@
         <!-- End of Section-2 -->
 
         <!-- Section-3 -->
-        <div class="section-3 center">
+        <div class="section-3 center" id="macbook">
             <!-- Section-3-Heading -->
             <h1 class="section-3-heading">Macbook Air</h1>
             <!-- End of Section-3-Heading -->
@@ -155,7 +156,7 @@
         <!-- End of Section-3 -->
 
         <!-- Section-4 -->
-        <section class="section-4 center">
+        <section class="section-4 center" id="iwatch">
             <!-- Section-4-Watches -->
             <div class="watches center">
                 <!-- Watch-Bands -->
@@ -280,6 +281,61 @@
             <!--End of  Watch-Button -->
         </section>
         <!-- End of Section-4 -->
+
+        <!-- Section-5 -->
+        <section class="section-5 center" id="airpods">
+            <!-- Section-5-Content -->
+            <div class="airpods">
+                <!-- Section-5-Heading -->
+                <h1 class="section-5-heading">AirPods</h1>
+                <!-- End of Section-5-Heading -->
+                <!-- Section-5-Images -->
+                <img
+                    src="images/AirPods/airpods-1.png"
+                    alt=""
+                    class="airpods-img-1"
+                />
+                <img
+                    src="images/AirPods/airpods-2.png"
+                    alt=""
+                    class="airpods-img-2"
+                />
+                <!-- End of Section-5-Images -->
+                <!-- Section-5-Buttons -->
+                <div class="airpod-btns">
+                    <button class="airpod-btn">Learn More</button>
+                    <button class="airpod-btn">Buy</button>
+                </div>
+                <!-- End of Section-5-Buttons -->
+            </div>
+            <!-- End of Section-5-Content -->
+        </section>
+        <!-- End of Section-5 -->
+
+        <!-- Section-6 -->
+        <section class="section-6 center">
+            <div class="section-6-icons">
+                <a href="#home" class="icon-link"
+                    ><img src="images/icons/home-icon.png" alt=""
+                /></a>
+                <a href="#iphone" class="icon-link"
+                    ><img src="images/icons/iphone-icon.png" alt=""
+                /></a>
+                <a href="#macbook" class="icon-link"
+                    ><img src="images/icons/macbook-icon.png" alt=""
+                /></a>
+                <a href="#iwatch" class="icon-link"
+                    ><img src="images/icons/watch-icon.png" alt=""
+                /></a>
+                <a href="#airpods" class="icon-link"
+                    ><img src="images/icons/airpods-icon.png" alt=""
+                /></a>
+            </div>
+            <p class="copyright">
+                Copyright &copy; ayush-devshark All Rights Reserved
+            </p>
+        </section>
+        <!-- Section-6 -->
         <script src="script.js"></script>
     </body>
 </html>
